--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ main {
 
 .gallery .image:nth-child(1){
     background-size: cover;
-    background-image: url(https://www.khaosod.co.th/wpapp/uploads/2019/02/4654654654654564654654655646456546465.jpg);
+    background-image: url(https://cdn.britannica.com/33/4833-050-F6E415FE/Flag-United-States-of-America.jpg);
 }
 
 .gallery .image:nth-child(2) {
